tests/ui/parser/misspelled-keywords/const.stderr
error: expected one of `!` or `::`, found `A`
  --> $DIR/const.rs:1:6
   |
LL | cons A: u8 = 10;
   |      ^ expected one of `!` or `::`
   |
help: there is a keyword `const` with a similar name
   |
LL | const A: u8 = 10;
   |     +

error: aborting due to 1 previous error

