tests/ui/parser/misspelled-keywords/const.rs
cons A: u8 = 10;
//~^ ERROR expected one of

fn main() {}
